--- a/website/terms.html
+++ b/website/terms.html
@@ -326,15 +326,9 @@
         </p>
     </main>
 </div>
-<div class="phone-call cbh-phone cbh-green cbh-show cbh-static" id="clbh_phone_div">
-  <a id="WhatsApp-button" href="https://wa.me/5521980619913" target="_blank" class="phoneJs"
-    title="WhatsApp 360imagem">
-    <div class="cbh-ph-circle"></div>
-    <div class="cbh-ph-circle-fill"></div>
-    <div class="cbh-ph-img-circle1">
-      <i class='bx bxs-chat' style='color:#ffffff'></i>
-    </div>
-  </a>
+<div class="message-btn">
+  <i class="icon">&#9993;</i> <!-- This is the envelope icon -->
+  <span class="message-text">Message</span>
 </div>
 <!-- /content -->
 <!-- footer -->
