--- a/website/Product-details.html
+++ b/website/Product-details.html
@@ -450,7 +450,7 @@
               <span class="fallback fallback-spin fallback-spin-primary fallback-spin-lg"></span>
             </div>
             <div class="text-center">
-              <button class="btn btn-dark" id="loadMoreReview" onclick="loadMoreReviews()">Load More</button>
+              <button class="btn btn-primary" id="loadMoreReview" onclick="loadMoreReviews()">Load More</button>
             </div>
           </div>
           
