--- a/seller-panel/ecommerce-products.html
+++ b/seller-panel/ecommerce-products.html
@@ -849,7 +849,9 @@
                                                 </div><!--end col-->
                                                 
                                                 <div class="col-auto">
-                                                  <button type="button" class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#addBoard"><i class="fa-solid fa-plus me-1"></i> Add Product</button>
+                                                    <a href="./add-products.html">
+                                                        <button type="button" class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#addBoard"><i class="fa-solid fa-plus me-1"></i> Add Product</button>
+                                                    </a>
                                                 </div><!--end col-->
                                             </form>    
                                         </div><!--end col-->
