--- a/website/index.html
+++ b/website/index.html
@@ -94,7 +94,7 @@
     <nav class="navbar">
         <div class="first-half">
             <div class="logo">
-              <a href="./home.html">
+              <a href="./index.html">
                 <img src="./assets/images/demo-logo.png" class="logo-image" alt="">
               </a>
             </div>
