--- a/website/privacy-policy.html
+++ b/website/privacy-policy.html
@@ -19,77 +19,77 @@
   <!-- header -->
   <nav class="navbar">
     <div class="first-half">
-      <div class="logo">
-        <a href="./home.html">
-          <img src="./assets/images/demo-logo.png" class="logo-image" alt="">
-        </a>
-      </div>
-      <div class="links">
-        <ul class="d-flex">
-          <li><a href="">Save More On App</a></li>
-          <li><a href="">Sell On Name</a></li>
-          <li><a href="">Help & Support</a></li>
-          <li class="dropdown">
-            <a href="#">Categories <i class='bx bx-chevron-down'></i></a>
-            <ul class="dropdown-menu">
-              <li class="sub-dropdown">
-                <a href="#" class="subdropdowns">Category 1<i class="bx bx-chevron-left"></i></a>
-                <ul class="sub-menu">
-                  <li><a href="#">Sub Category 1</a></li>
-                  <li><a href="#">Sub Category 2</a></li>
-                </ul>
-              </li>
-              <li class="sub-dropdown">
-                <a href="#" class="subdropdowns">Category 2 <i class="bx bx-chevron-left"></i></a>
-                <ul class="sub-menu">
-                  <li><a href="#">Sub Category 3</a></li>
-                  <li><a href="#">Sub Category 4</a></li>
-                </ul>
-              </li>
-              <li class="sub-dropdown">
-                <a href="#">Category 1</a>
-              </li>
-              <li class="sub-dropdown">
-                <a href="#">Category 1</a>
-              </li>
-              <li class="sub-dropdown">
-                <a href="#">Category 1</a>
+        <div class="logo">
+          <a href="./index.html">
+            <img src="./assets/images/demo-logo.png" class="logo-image" alt="">
+          </a>
+        </div>
+        <div class="links">
+            <ul class="d-flex">
+                <li><a href="">Save More On App</a></li>
+                <li><a href="">Sell On Name</a></li>
+                <li><a href="">Help & Support</a></li>
+                <li class="dropdown">
+                  <a href="#">Categories <i class='bx bx-chevron-down'></i></a>
+                  <ul class="dropdown-menu">
+                      <li class="sub-dropdown">
+                          <a href="#" class="subdropdowns">Category 1<i class="bx bx-chevron-left"></i></a>
+                          <ul class="sub-menu">
+                              <li><a href="#">Sub Category 1</a></li>
+                              <li><a href="#">Sub Category 2</a></li>
+                          </ul>
+                      </li>
+                      <li class="sub-dropdown">
+                          <a href="#" class="subdropdowns">Category 2 <i class="bx bx-chevron-left"></i></a>
+                          <ul class="sub-menu">
+                              <li><a href="#">Sub Category 3</a></li>
+                              <li><a href="#">Sub Category 4</a></li>
+                          </ul>
+                      </li>
+                      <li class="sub-dropdown">
+                        <a href="#">Category 1</a>
+                    </li>
+                    <li class="sub-dropdown">
+                      <a href="#">Category 1</a>
+                  </li>
+                  <li class="sub-dropdown">
+                    <a href="#">Category 1</a>
+                </li>
+                  </ul>
               </li>
             </ul>
-          </li>
-        </ul>
-      </div>
+        </div>
     </div>
     <div class="second-half">
-      <ul class="d-flex">
-        <li>
-          <div class="search-box">
-            <input type="text" class="search-box-input" placeholder="What are you looking for ?">
-            <button class="search-box-btn">
-              <i class="search-box-icon material-icons bx bx-search"></i>
-            </button>
-          </div>
-        </li>
-        <li><a href="./cart.html"><i class="bx bx-cart fs-4"></i></a></li>
-        <li>
-          <div class="dropdown" tab-index="0">
-            <button id="dropdown-btn"></button>
-            <ul class="dropdown-content" id="dropdown-content"></ul>
-          </div>
-        </li>
-        <li>
-          <a href="./login.html">
-            <button class="btn btn-pill btn-login">Log In</button>
-          </a>
-        </li>
-        <li>
-          <a href="./login.html">
-            <button class="btn btn-pill btn-signUp">Sign Up</button>
-          </a>
-        </li>
-      </ul>
+        <ul class="d-flex">
+            <li>
+                <div class="search-box">
+                    <input type="text" class="search-box-input" placeholder="What are you looking for ?">
+                    <button class="search-box-btn">
+                        <i class="search-box-icon material-icons bx bx-search"></i>
+                    </button>
+                </div>
+            </li>
+            <li><a href="./cart.html"><i class="bx bx-cart fs-4"></i></a></li>
+            <li>
+                <div class="dropdown" tab-index="0">
+                    <button id="dropdown-btn"></button>
+                    <ul class="dropdown-content" id="dropdown-content"></ul>
+                  </div>
+            </li>
+            <li>
+              <a href="./login.html">
+                <button class="btn btn-pill btn-login">Log In</button>
+              </a>
+            </li>
+            <li>
+              <a href="./login.html">
+                <button class="btn btn-pill btn-signUp">Sign Up</button>
+              </a>
+            </li>
+        </ul>
     </div>
-  </nav>
+</nav>
   <div class="content-area">
     <div class="breadcrumbs-container">
         <h4>Privacy Policy</h4>
