--- a/website/index.html
+++ b/website/index.html
@@ -1182,10 +1182,10 @@ for (const locale of locales) {
         slidesPerView: 4,          // Show 4 slides at a time
         spaceBetween: 10,          // Space between slides
         loop: true,                // Enable loop for infinite sliding
-       // autoplay: {
-         //   delay: 2500,           // Auto slide after 2.5 seconds
-           // disableOnInteraction: false, // Continue autoplay after manual interaction
-        //},
+       autoplay: {
+           delay: 2500,           // Auto slide after 2.5 seconds
+           disableOnInteraction: false, // Continue autoplay after manual interaction
+        },
         navigation: {
             nextEl: ".swiper-button-next",
             prevEl: ".swiper-button-prev",
