--- a/seller-panel/index.html
+++ b/seller-panel/index.html
@@ -321,10 +321,10 @@
                             <div class="collapse " id="sidebarDashboards">
                                 <ul class="nav flex-column">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="index.html">Analytics</a>
+                                        <a class="nav-link" href="./index.html">Analytics</a>
                                     </li><!--end nav-item-->
                                     <li class="nav-item">
-                                        <a class="nav-link" href="ecommerce-index.html">Ecommerce</a>
+                                        <a class="nav-link" href="./ecommerce.html">Ecommerce</a>
                                     </li><!--end nav-item-->
                                 </ul><!--end nav-->
                             </div><!--end startbarDashboards-->
@@ -346,7 +346,7 @@
                             <div class="collapse " id="sidebarproducts">
                                 <ul class="nav flex-column">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="ecommerce-products.html">Manage Products</a>
+                                        <a class="nav-link" href="./ecommerce-products.html">Manage Products</a>
                                     </li><!--end nav-item-->
                                     <li class="nav-item">
                                         <a class="nav-link" href="./add-products.html">Add Products</a>
@@ -355,7 +355,7 @@
                                         <a class="nav-link" href="./media-center.html">Media Center</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="ecommerce-refunds.html">Fulfilment by 
+                                        <a class="nav-link" href="./ecommerce-refunds.html">Fulfilment by 
                                             Name
                                         </a>
                                     </li>
@@ -376,13 +376,13 @@
                             <div class="collapse " id="sidebarOrder">
                                 <ul class="nav flex-column">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="ecommerce-orders.html">Orders</a>
+                                        <a class="nav-link" href="./ecommerce-orders.html">Orders</a>
                                     </li><!--end nav-item-->
                                     <li class="nav-item">
-                                        <a class="nav-link" href="ecommerce-order-details.html">Order Details</a>
+                                        <a class="nav-link" href="./ecommerce-order-details.html">Order Details</a>
                                     </li><!--end nav-item-->
                                     <li class="nav-item">
-                                        <a class="nav-link" href="ecommerce-refunds.html">Refunds</a>
+                                        <a class="nav-link" href="./ecommerce-refunds.html">Refunds</a>
                                     </li><!--end nav-item-->
                                 </ul><!--end nav-->
                             </div><!--end startbarDashboards-->
@@ -398,7 +398,7 @@
                             <div class="collapse " id="sidebarMarketing">
                                 <ul class="nav flex-column">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="campaign.html">Compaign (New)</a>
+                                        <a class="nav-link" href="./campaign.html">Compaign (New)</a>
                                     </li><!--end nav-item-->
                                     <!--end nav-item-->
                                     <li class="nav-item">
@@ -408,7 +408,7 @@
                                         <a class="nav-link" href="./free-shipping.html">Free Shipping (Old)</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="bundles.html">Bundles</a>
+                                        <a class="nav-link" href="./bundles.html">Bundles</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="./promotions.html">Promotions</a>
