--- a/seller-panel and website/web-index.html
+++ b/seller-panel and website/web-index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./web-assets/assets/css/kit.css">
     <link rel="stylesheet" href="./web-assets/assets/css/style.css">
 <style>
+
  /* Container for the button */
 /* Container for the button */
 /* Container for the button */
@@ -151,6 +152,19 @@
                         <ul class="dropdown-content" id="dropdown-content"></ul>
                       </div>
                 </li>
+                <li>
+                  <div class="drop-profile">
+                    <img src="./web-assets/assets/images/avatar-web.jpeg" alt="Avatar" width="50px" height="50px" style="border-radius: 50%;" onclick="toggleDropdown()">
+                    <i class='bx bxs-down-arrow' style="font-size: 8px;color: white;" onclick="toggleDropdown()"></i>
+                    <div class="drop-profile-content">
+                      <a href="./web-account-manage.html">Manage My Account</a>
+                      <a href="./web-my-orders.html">My Orders</a>
+                      <a href="./web-wishlist.html">My Wishlist & Followed Stores</a>
+                      <a href="./web-my-reviews.html">My Reviews</a>
+                      <a href="./web-login.html">Logout</a>
+                    </div>
+                  </div>
+                </li>              
                 <li>
                   <a href="./web-login.html">
                     <button class="btn btn-pill btn-login">Log In</button>
@@ -1095,6 +1109,7 @@
 
  <!-- THIRD PARTY JS -->
  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+ <script src="./web-assets/assets/js/script.js"></script>
 
 <!-- scripts -->
  <script>
