--- a/seller-panel and website/web-login.html
+++ b/seller-panel and website/web-login.html
@@ -76,81 +76,94 @@
 }
 </style>
 <body>
-    <!-- header -->
-    <nav class="navbar">
-        <div class="first-half">
-            <div class="logo">
-              <a href="./web-index.html">
-                <img src="./web-assets/assets/images/demo-logo.png" class="logo-image" alt="">
-              </a>
-            </div>
-            <div class="links">
-                <ul class="d-flex">
-                    <li><a href="">Save More On App</a></li>
-                    <li><a href="">Sell On Name</a></li>
-                    <li><a href="">Help & Support</a></li>
-                    <li class="dropdown">
-                      <a href="#">Categories <i class='bx bx-chevron-down'></i></a>
-                      <ul class="dropdown-menu">
-                          <li class="sub-dropdown">
-                              <a href="#" class="subdropdowns">Category 1<i class="bx bx-chevron-left"></i></a>
-                              <ul class="sub-menu">
-                                  <li><a href="#">Sub Category 1</a></li>
-                                  <li><a href="#">Sub Category 2</a></li>
-                              </ul>
-                          </li>
-                          <li class="sub-dropdown">
-                              <a href="#" class="subdropdowns">Category 2 <i class="bx bx-chevron-left"></i></a>
-                              <ul class="sub-menu">
-                                  <li><a href="#">Sub Category 3</a></li>
-                                  <li><a href="#">Sub Category 4</a></li>
-                              </ul>
-                          </li>
-                          <li class="sub-dropdown">
-                            <a href="#">Category 1</a>
-                        </li>
-                        <li class="sub-dropdown">
-                          <a href="#">Category 1</a>
+  <!-- header -->
+  <nav class="navbar">
+    <div class="first-half">
+        <div class="logo">
+          <a href="./web-index.html">
+            <img src="./web-assets/assets/images/demo-logo.png" class="logo-image" alt="">
+          </a>
+        </div>
+        <div class="links">
+            <ul class="d-flex">
+                <li><a href="">Save More On App</a></li>
+                <li><a href="">Sell On Name</a></li>
+                <li><a href="">Help & Support</a></li>
+                <li class="dropdown">
+                  <a href="#">Categories <i class='bx bx-chevron-down'></i></a>
+                  <ul class="dropdown-menu">
+                      <li class="sub-dropdown">
+                          <a href="#" class="subdropdowns">Category 1<i class="bx bx-chevron-left"></i></a>
+                          <ul class="sub-menu">
+                              <li><a href="#">Sub Category 1</a></li>
+                              <li><a href="#">Sub Category 2</a></li>
+                          </ul>
+                      </li>
+                      <li class="sub-dropdown">
+                          <a href="#" class="subdropdowns">Category 2 <i class="bx bx-chevron-left"></i></a>
+                          <ul class="sub-menu">
+                              <li><a href="#">Sub Category 3</a></li>
+                              <li><a href="#">Sub Category 4</a></li>
+                          </ul>
                       </li>
                       <li class="sub-dropdown">
                         <a href="#">Category 1</a>
                     </li>
-                      </ul>
+                    <li class="sub-dropdown">
+                      <a href="#">Category 1</a>
                   </li>
-                </ul>
-            </div>
-        </div>
-        <div class="second-half">
-            <ul class="d-flex">
-                <li>
-                    <div class="search-box">
-                        <input type="text" class="search-box-input" placeholder="What are you looking for ?">
-                        <button class="search-box-btn">
-                            <i class="search-box-icon material-icons bx bx-search"></i>
-                        </button>
-                    </div>
+                  <li class="sub-dropdown">
+                    <a href="#">Category 1</a>
                 </li>
-                <li><a href="./web-cart.html"><i class="bx bx-cart fs-4"></i></a></li>
-                <li>
-                    <div class="dropdown" tab-index="0">
-                        <button id="dropdown-btn"></button>
-                        <ul class="dropdown-content" id="dropdown-content"></ul>
-                      </div>
-                </li>
-                <li>
-                  <a href="./web-login.html">
-                    <button class="btn btn-pill btn-login">Log In</button>
-                  </a>
-                </li>
-                <li>
-                  <a href="./web-login.html">
-                    <button class="btn btn-pill btn-signUp">Sign Up</button>
-                  </a>
-                </li>
+                  </ul>
+              </li>
             </ul>
         </div>
-    </nav>
-    <!-- /header -->
+    </div>
+    <div class="second-half">
+        <ul class="d-flex">
+            <li>
+                <div class="search-box">
+                    <input type="text" class="search-box-input" placeholder="What are you looking for ?">
+                    <button class="search-box-btn">
+                        <i class="search-box-icon material-icons bx bx-search"></i>
+                    </button>
+                </div>
+            </li>
+            <li><a href="./web-cart.html"><i class="bx bx-cart fs-4"></i></a></li>
+            <li>
+                <div class="dropdown" tab-index="0">
+                    <button id="dropdown-btn"></button>
+                    <ul class="dropdown-content" id="dropdown-content"></ul>
+                  </div>
+            </li>
+            <li>
+              <div class="drop-profile">
+                <img src="./web-assets/assets/images/avatar-web.jpeg" alt="Avatar" width="50px" height="50px" style="border-radius: 50%;" onclick="toggleDropdown()">
+                <i class='bx bxs-down-arrow' style="font-size: 8px;color: white;" onclick="toggleDropdown()"></i>
+                <div class="drop-profile-content">
+                  <a href="./web-account-manage.html">Manage My Account</a>
+                  <a href="./web-my-orders.html">My Orders</a>
+                  <a href="./web-wishlist.html">My Wishlist & Followed Stores</a>
+                  <a href="./web-my-reviews.html">My Reviews</a>
+                  <a href="./web-login.html">Logout</a>
+                </div>
+              </div>
+            </li>              
+            <li>
+              <a href="./web-login.html">
+                <button class="btn btn-pill btn-login">Log In</button>
+              </a>
+            </li>
+            <li>
+              <a href="./web-login.html">
+                <button class="btn btn-pill btn-signUp">Sign Up</button>
+              </a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<!-- /header -->
     <!-- content -->
     <div class="blob-container">
         <div class="blob blob1"></div>
@@ -594,6 +607,8 @@
 
     <!-- THIRD PARTY JS -->
     <!-- scripts -->
+    <script src="./web-assets/assets/js/script.js"></script>
+     
     <script>
         const locales = ["en-GB", "ar-SA", "zh-CN", "de-DE", "es-ES", "fr-FR", "hi-IN", "it-IT", "in-ID", "ja-JP", "ko-KR", "nl-NL", "no-NO", "pl-PL", "pt-BR", "sv-SE", "fi-FI", "th-TH", "tr-TR", "uk-UA", "vi-VN", "ru-RU", "he-IL"];
 
