--- a/seller-panel and website/web-privacy-policy.html
+++ b/seller-panel and website/web-privacy-policy.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-
   <!-- header -->
   <nav class="navbar">
     <div class="first-half">
@@ -78,6 +77,19 @@
                   </div>
             </li>
             <li>
+              <div class="drop-profile">
+                <img src="./web-assets/assets/images/avatar-web.jpeg" alt="Avatar" width="50px" height="50px" style="border-radius: 50%;" onclick="toggleDropdown()">
+                <i class='bx bxs-down-arrow' style="font-size: 8px;color: white;" onclick="toggleDropdown()"></i>
+                <div class="drop-profile-content">
+                  <a href="./web-account-manage.html">Manage My Account</a>
+                  <a href="./web-my-orders.html">My Orders</a>
+                  <a href="./web-wishlist.html">My Wishlist & Followed Stores</a>
+                  <a href="./web-my-reviews.html">My Reviews</a>
+                  <a href="./web-login.html">Logout</a>
+                </div>
+              </div>
+            </li>              
+            <li>
               <a href="./web-login.html">
                 <button class="btn btn-pill btn-login">Log In</button>
               </a>
@@ -90,6 +102,7 @@
         </ul>
     </div>
 </nav>
+<!-- /header -->
   <div class="content-area">
     <div class="breadcrumbs-container">
         <h4>Privacy Policy</h4>
@@ -295,6 +308,7 @@
 
 <!-- THIRD PARTY JS -->
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="./web-assets/assets/js/script.js"></script>
 
 <!-- scripts -->
 <script>
