--- a/seller-panel and website/web-shipment-policy.html
+++ b/seller-panel and website/web-shipment-policy.html
@@ -13,8 +13,6 @@
 </style>
 </head>
 <body>
-  <!-- model for App -->
-
   <!-- header -->
   <nav class="navbar">
     <div class="first-half">
@@ -77,6 +75,19 @@
                   </div>
             </li>
             <li>
+              <div class="drop-profile">
+                <img src="./web-assets/assets/images/avatar-web.jpeg" alt="Avatar" width="50px" height="50px" style="border-radius: 50%;" onclick="toggleDropdown()">
+                <i class='bx bxs-down-arrow' style="font-size: 8px;color: white;" onclick="toggleDropdown()"></i>
+                <div class="drop-profile-content">
+                  <a href="./web-account-manage.html">Manage My Account</a>
+                  <a href="./web-my-orders.html">My Orders</a>
+                  <a href="./web-wishlist.html">My Wishlist & Followed Stores</a>
+                  <a href="./web-my-reviews.html">My Reviews</a>
+                  <a href="./web-login.html">Logout</a>
+                </div>
+              </div>
+            </li>              
+            <li>
               <a href="./web-login.html">
                 <button class="btn btn-pill btn-login">Log In</button>
               </a>
@@ -89,7 +100,7 @@
         </ul>
     </div>
 </nav>
-    <!-- /header -->
+<!-- /header -->
     <!-- content -->
 <div class="content-area">
     <div class="breadcrumbs-container">
@@ -219,6 +230,7 @@
 
  <!-- THIRD PARTY JS -->
  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+ <script src="./web-assets/assets/js/script.js"></script>
 
 <!-- scripts -->
  <script>
