--- a/seller-panel and website/pages-faq.html
+++ b/seller-panel and website/pages-faq.html
@@ -41,7 +41,7 @@
                             </button>
                         </li> 
                         <li class="mx-3 welcome-text">
-                            <h3 class="mb-0 fw-bold text-truncate">Good Morning, James!</h3>
+                            <h3 class="mb-0 fw-bold text-truncate">(Beta)</h3>
                             <!-- <h6 class="mb-0 fw-normal text-muted text-truncate fs-14">Here's your overview this week.</h6> -->
                         </li>                   
                     </ul>
@@ -311,23 +311,16 @@
                                 </small> -->
                                 <span>Main Menu</span>
                             </li>
+    
                             <li class="nav-item">
-                                <a class="nav-link" href="#sidebarDashboards" data-bs-toggle="collapse" role="button"
+                                <a class="nav-link" href="./index.html" role="button"
                                     aria-expanded="false" aria-controls="sidebarDashboards">
                                     <i class="iconoir-home-simple menu-icon"></i>
-                                    <span>Dashboards</span>
+                                    <span>Dashboard</span>
                                 </a>
-                                <div class="collapse " id="sidebarDashboards">
-                                    <ul class="nav flex-column">
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="index.html">Analytics</a>
-                                        </li><!--end nav-item-->
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="ecommerce-index.html">Ecommerce</a>
-                                        </li><!--end nav-item-->
-                                    </ul><!--end nav-->
-                                </div><!--end startbarDashboards-->
+                               <!--end startbarDashboards-->
                             </li>
+                          
                             <li class="menu-label pt-0 mt-0">
                                 <small class="label-border">
                                     <div class="border_left hidden-xs"></div>
@@ -345,7 +338,7 @@
                                 <div class="collapse " id="sidebarproducts">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
-                                            <a class="nav-link" href="ecommerce-products.html">Manage Products</a>
+                                            <a class="nav-link" href="./ecommerce-products.html">Manage Products</a>
                                         </li><!--end nav-item-->
                                         <li class="nav-item">
                                             <a class="nav-link" href="./add-products.html">Add Products</a>
@@ -354,7 +347,7 @@
                                             <a class="nav-link" href="./media-center.html">Media Center</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="ecommerce-refunds.html">Fulfilment by 
+                                            <a class="nav-link" href="./ecommerce-refunds.html">Fulfilment by 
                                                 Name
                                             </a>
                                         </li>
@@ -375,13 +368,13 @@
                                 <div class="collapse " id="sidebarOrder">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
-                                            <a class="nav-link" href="ecommerce-orders.html">Orders</a>
+                                            <a class="nav-link" href="./ecommerce-orders.html">Orders</a>
                                         </li><!--end nav-item-->
                                         <li class="nav-item">
-                                            <a class="nav-link" href="ecommerce-order-details.html">Order Details</a>
+                                            <a class="nav-link" href="./ecommerce-order-details.html">Order Details</a>
                                         </li><!--end nav-item-->
                                         <li class="nav-item">
-                                            <a class="nav-link" href="ecommerce-refunds.html">Refunds</a>
+                                            <a class="nav-link" href="./ecommerce-refunds.html">Refunds</a>
                                         </li><!--end nav-item-->
                                     </ul><!--end nav-->
                                 </div><!--end startbarDashboards-->
@@ -397,7 +390,7 @@
                                 <div class="collapse " id="sidebarMarketing">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
-                                            <a class="nav-link" href="campaign.html">Compaign (New)</a>
+                                            <a class="nav-link" href="./campaign.html">Compaign (New)</a>
                                         </li><!--end nav-item-->
                                         <!--end nav-item-->
                                         <li class="nav-item">
@@ -407,7 +400,7 @@
                                             <a class="nav-link" href="./free-shipping.html">Free Shipping (Old)</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="bundles.html">Bundles</a>
+                                            <a class="nav-link" href="./bundles.html">Bundles</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="./promotions.html">Promotions</a>
