--- a/seller-panel and website/index.html
+++ b/seller-panel and website/index.html
@@ -705,6 +705,9 @@
                     <div class="col-md-3">
                         <div class="card">
                             <div class="card-body border-dashed-bottom pb-3">
+                                <div class="ribbon4 rib4-blue">
+                                    <span style="border: none;" class="ribbon4-band ribbon4-band-blue text-white text-center">Beta</span>                                        
+                                </div>
                                 <div class="row d-flex justify-content-between">
                                     <div class="col-auto">
                                         <div class="d-flex justify-content-center align-items-center thumb-xl border border-secondary rounded-circle">
@@ -713,47 +716,7 @@
                                         <h5 class="mt-2 mb-0 fs-14">New Order</h5>
                                     </div><!--end col-->
                                     <div class="col align-self-center ">
-                                        <div id="line-2" class="apex-charts float-end" style="min-height: 35px;">
-                                            <div id="apexchartscctkr3lvh" class="apexcharts-canvas apexchartscctkr3lvh apexcharts-theme-light" style="width: 120px; height: 35px;">
-                                                <svg id="SvgjsSvg1052" width="120" height="35" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.dev" class="apexcharts-svg" xmlns:data="ApexChartsNS" transform="translate(0, 0)" style="background: transparent;">
-                                                    <foreignObject x="0" y="0" width="120" height="35">
-                                                        <div class="apexcharts-legend" xmlns="http://www.w3.org/1999/xhtml" style="max-height: 17.5px;">
-                                                        </div>
-                                                    </foreignObject>
-                                                    <rect id="SvgjsRect1057" width="0" height="0" x="0" y="0" rx="0" ry="0" opacity="1" stroke-width="0" stroke="none" stroke-dasharray="0" fill="#fefefe"></rect>
-                                                    <g id="SvgjsG1098" class="apexcharts-yaxis" rel="0" transform="translate(-18, 0)"></g>
-                                                    <g id="SvgjsG1054" class="apexcharts-inner apexcharts-graphical" transform="translate(0, 1.5)">
-                                                        <defs id="SvgjsDefs1053">
-                                                          <clipPath id="gridRectMaskcctkr3lvh">
-                                                            <rect id="SvgjsRect1059" width="127" height="39" x="-3.5" y="-3.5" rx="0" ry="0" opacity="1" stroke-width="0" stroke="none" stroke-dasharray="0" fill="#fff"></rect>
-                                                          </clipPath>
-                                                          <clipPath id="forecastMaskcctkr3lvh"></clipPath>
-                                                          <clipPath id="nonForecastMaskcctkr3lvh"></clipPath>
-                                                          <clipPath id="gridRectMarkerMaskcctkr3lvh">
-                                                            <rect id="SvgjsRect1060" width="124" height="36" x="-2" y="-2" rx="0" ry="0" opacity="1" stroke-width="0" stroke="none" stroke-dasharray="0" fill="#fff"></rect>
-                                                        </clipPath>
-                                                        <filter id="SvgjsFilter1066" filterUnits="userSpaceOnUse" width="200%" height="200%" x="-50%" y="-50%">
-                                                            <feFlood id="SvgjsFeFlood1067" flood-color="rgba(132, 145, 183, 0.3)" flood-opacity="0.35" result="SvgjsFeFlood1067Out" in="SourceGraphic"></feFlood><feComposite id="SvgjsFeComposite1068" in="SvgjsFeFlood1067Out" in2="SourceAlpha" operator="in" result="SvgjsFeComposite1068Out"></feComposite>
-                                                            <feOffset id="SvgjsFeOffset1069" dx="0" dy="4" result="SvgjsFeOffset1069Out" in="SvgjsFeComposite1068Out"></feOffset>
-                                                            <feGaussianBlur id="SvgjsFeGaussianBlur1070" stdDeviation="2 " result="SvgjsFeGaussianBlur1070Out" in="SvgjsFeOffset1069Out"></feGaussianBlur>
-                                                            <feMerge id="SvgjsFeMerge1071" result="SvgjsFeMerge1071Out" in="SourceGraphic">
-                                                                <feMergeNode id="SvgjsFeMergeNode1072" in="SvgjsFeGaussianBlur1070Out"></feMergeNode>
-                                                                <feMergeNode id="SvgjsFeMergeNode1073" in="[object Arguments]"></feMergeNode>
-                                                            </feMerge>
-                                                            <feBlend id="SvgjsFeBlend1074" in="SourceGraphic" in2="SvgjsFeMerge1071Out" mode="normal" result="SvgjsFeBlend1074Out"></feBlend>
-                                                        </filter>
-                                                    </defs>
-                                                    <line id="SvgjsLine1058" x1="11.5" y1="0" x2="11.5" y2="32" stroke="#b6b6b6" stroke-dasharray="3" stroke-linecap="butt" class="apexcharts-xcrosshairs" x="11.5" y="0" width="1" height="32" fill="#b1b9c4" filter="none" fill-opacity="0.9" stroke-width="1"></line>
-                                                    <g id="SvgjsG1075" class="apexcharts-grid"><g id="SvgjsG1076" class="apexcharts-gridlines-horizontal" style="display: none;">
-                                                        <line id="SvgjsLine1079" x1="0" y1="0" x2="120" y2="0" stroke="#e0e0e0" stroke-dasharray="0" stroke-linecap="butt" class="apexcharts-gridline"></line>
-                                                        <line id="SvgjsLine1080" x1="0" y1="32" x2="120" y2="32" stroke="#e0e0e0" stroke-dasharray="0" stroke-linecap="butt" class="apexcharts-gridline"></line>
-                                                    </g>
-                                                    <g id="SvgjsG1077" class="apexcharts-gridlines-vertical" style="display: none;"></g>
-                                                    <line id="SvgjsLine1082" x1="0" y1="32" x2="120" y2="32" stroke="transparent" stroke-dasharray="0" stroke-linecap="butt"></line>
-                                                    <line id="SvgjsLine1081" x1="0" y1="1" x2="0" y2="32" stroke="transparent" stroke-dasharray="0" stroke-linecap="butt"></line>
-                                                </g>
-                                                <g id="SvgjsG1078" class="apexcharts-grid-borders" style="display: none;"></g>
-                                                <g id="SvgjsG1061" class="apexcharts-line-series apexcharts-plot-series"><g id="SvgjsG1062" class="apexcharts-series" zIndex="0" seriesName="series-1" data:longestSeries="true" rel="1" data:realIndex="0"><path id="SvgjsPath1065" d="M0 23.11111111111111C4.199999999999999 23.11111111111111 7.800000000000001 8.533333333333335 12 8.533333333333335C16.2 8.533333333333335 19.8 17.422222222222224 24 17.422222222222224C28.2 17.422222222222224 31.8 0.3555555555555543 36 0.3555555555555543C40.2 0.3555555555555543 43.8 9.600000000000001 48 9.600000000000001C52.2 9.600000000000001 55.8 23.11111111111111 60 23.11111111111111C64.2 23.11111111111111 67.8 16.355555555555554 72 16.355555555555554C76.2 16.355555555555554 79.8 27.733333333333334 84 27.733333333333334C88.2 27.733333333333334 91.8 19.2 96 19.2C100.2 19.2 103.8 28.8 108 28.8C112.2 28.8 115.8 12.8 120 12.8C120 12.8 120 12.8 120 12.8 " fill="none" fill-opacity="1" stroke="rgba(149,160,197,0.85)" stroke-opacity="1" stroke-linecap="round" stroke-width="3" stroke-dasharray="0" class="apexcharts-line" index="0" clip-path="url(#gridRectMaskcctkr3lvh)" filter="url(#SvgjsFilter1066)" pathTo="M 0 23.11111111111111C 4.199999999999999 23.11111111111111 7.800000000000001 8.533333333333335 12 8.533333333333335C 16.2 8.533333333333335 19.8 17.422222222222224 24 17.422222222222224C 28.2 17.422222222222224 31.8 0.3555555555555543 36 0.3555555555555543C 40.2 0.3555555555555543 43.8 9.600000000000001 48 9.600000000000001C 52.2 9.600000000000001 55.8 23.11111111111111 60 23.11111111111111C 64.2 23.11111111111111 67.8 16.355555555555554 72 16.355555555555554C 76.2 16.355555555555554 79.8 27.733333333333334 84 27.733333333333334C 88.2 27.733333333333334 91.8 19.2 96 19.2C 100.2 19.2 103.8 28.8 108 28.8C 112.2 28.8 115.8 12.8 120 12.8" pathFrom="M -1 32 L -1 32 L 12 32 L 24 32 L 36 32 L 48 32 L 60 32 L 72 32 L 84 32 L 96 32 L 108 32 L 120 32" fill-rule="evenodd"></path><g id="SvgjsG1063" class="apexcharts-series-markers-wrap apexcharts-hidden-element-shown" data:realIndex="0"><g class="apexcharts-series-markers"><circle id="SvgjsCircle1102" r="0" cx="12" cy="8.533333333333335" class="apexcharts-marker wdxek9ae2 no-pointer-events" stroke="#ffffff" fill="#95a0c5" fill-opacity="1" stroke-width="2" stroke-opacity="0.9" default-marker-size="0"></circle></g></g></g><g id="SvgjsG1064" class="apexcharts-datalabels" data:realIndex="0"></g></g><line id="SvgjsLine1083" x1="0" y1="0" x2="120" y2="0" stroke="#b6b6b6" stroke-dasharray="0" stroke-width="1" stroke-linecap="butt" class="apexcharts-ycrosshairs"></line><line id="SvgjsLine1084" x1="0" y1="0" x2="120" y2="0" stroke-dasharray="0" stroke-width="0" stroke-linecap="butt" class="apexcharts-ycrosshairs-hidden"></line><g id="SvgjsG1085" class="apexcharts-xaxis" transform="translate(0, 0)"><g id="SvgjsG1086" class="apexcharts-xaxis-texts-g" transform="translate(0, 4)"></g></g><g id="SvgjsG1099" class="apexcharts-yaxis-annotations apexcharts-hidden-element-shown"></g><g id="SvgjsG1100" class="apexcharts-xaxis-annotations apexcharts-hidden-element-shown"></g><g id="SvgjsG1101" class="apexcharts-point-annotations apexcharts-hidden-element-shown"></g></g></svg><div class="apexcharts-tooltip apexcharts-theme-light" style="left: 23px; top: 11.5333px;"><div class="apexcharts-tooltip-series-group apexcharts-active" style="order: 1; display: flex;"><span class="apexcharts-tooltip-marker" style="background-color: rgb(149, 160, 197); display: none;"></span><div class="apexcharts-tooltip-text" style="font-family: Helvetica, Arial, sans-serif; font-size: 12px;"><div class="apexcharts-tooltip-y-group"><span class="apexcharts-tooltip-text-y-label"></span><span class="apexcharts-tooltip-text-y-value">66</span></div><div class="apexcharts-tooltip-goals-group"><span class="apexcharts-tooltip-text-goals-label"></span><span class="apexcharts-tooltip-text-goals-value"></span></div><div class="apexcharts-tooltip-z-group"><span class="apexcharts-tooltip-text-z-label"></span><span class="apexcharts-tooltip-text-z-value"></span></div></div></div></div><div class="apexcharts-yaxistooltip apexcharts-yaxistooltip-0 apexcharts-yaxistooltip-left apexcharts-theme-light"><div class="apexcharts-yaxistooltip-text"></div></div></div></div> 
+                                        <div id="line-2" class="apex-charts float-end"></div>
                                     </div><!--end col-->
                                 </div><!--end row-->
                             </div><!--end card-body-->
